[package]
name = "ds_rs"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/ManiGhazaee/ds_rs"
authors = ["ManiGhazaee <hosseinghazaee1@gmail.com>"]
description = "Data structures for educational purposes"
readme = "README.md"
license = "MIT"
keywords = ["data-structures", "data-structure"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rayon = "1.10" 

[dev-dependencies]
pretty_assertions = "1.4"